# ppc-2024-autumn

./: .gitignore  2  CMakeCache.txt  CMakeLists.txt  Makefile  appveyor.yml  cmake_install.cmake  flake.nix
.devcontainer/: Dockerfile  devcontainer.json  postinstall.sh
.github/workflows/: main.yml  perf-statistic.yml  static-analysis-pr.yml  static-analysis.yml
1stsamples/: CMakeLists.txt  Makefile  cmake_install.cmake
1stsamples/mpi/: Makefile  cmake_install.cmake  main.cpp
1stsamples/mpi_boost/: Makefile  cmake_install.cmake  main.cpp
1stsamples/omp/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
1stsamples/stl/: Makefile  cmake_install.cmake  main.cpp
1stsamples/tbb/: Makefile  cmake_install.cmake  main.cpp
cmake/: boost.cmake
enc_temp_folder/5bfec21e72a21e2622b4f6bcb47a521/: main.cpp
enc_temp_folder/db74acbd92caf445d35c4cf1a941e88c/: ops_mpi.hpp
modules/: CMakeLists.txt  Makefile  cmake_install.cmake
modules/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules/ref/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ppc_boost/tmp/: ppc_boost-cfgcmd.txt  ppc_boost-mkdirs.cmake
ppc_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  parallel_programming_course.sln  ppc_boost.vcxproj  ppc_boost.vcxproj.filters  ppc_googletest.vcxproj  ppc_googletest.vcxproj.filters  ppc_onetbb.vcxproj  ppc_onetbb.vcxproj.filters
ppc_build/1stsamples/: cmake_install.cmake
ppc_build/arch/: core_module_lib.lib  sample_mpi_boost.exp  sample_mpi_boost.lib  seq_module_lib.lib
ppc_build/modules/: cmake_install.cmake
ppc_build/tasks/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake  mpi_func_tests.vcxproj  mpi_func_tests.vcxproj.filters  mpi_module_lib.vcxproj  mpi_module_lib.vcxproj.filters  mpi_perf_tests.vcxproj  mpi_perf_tests.vcxproj.filters  omp_func_tests.vcxproj  omp_func_tests.vcxproj.filters  omp_module_lib.vcxproj  omp_module_lib.vcxproj.filters  omp_perf_tests.vcxproj  omp_perf_tests.vcxproj.filters  seq_func_tests.vcxproj  seq_func_tests.vcxproj.filters  seq_module_lib.sln  (+17 more)
scripts/: generate_perf_results.sh  run.sh  run_perf_collector.sh
tasks/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+3034 files in other folders)
